# pubmed_literature_alert_service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  railway.json
.githooks/: README.md  pre-commit  scan-diff.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOY.md
scheduler/: .gitignore  Dockerfile  cli.go  embed_dev.go  embed_prod.go  go.mod  go.sum  main.go
scheduler/internal/admin/: handlers.go  handlers_test.go  routes.go
scheduler/internal/apiutil/: errors.go  jsonio.go  pagination.go
scheduler/internal/articles/: handlers.go  handlers_test.go  routes.go  store.go
scheduler/internal/auth/: admin.go  auth.go  change_password.go  change_password_test.go  handlers.go  handlers_test.go  main_test.go  middleware.go  password.go  password_test.go  ratelimit.go  ratelimit_test.go  routes.go  session.go  session_test.go  user.go
scheduler/internal/digests/: handlers.go  handlers_test.go  routes.go  store.go
scheduler/internal/httpapi/: articles.go  digest.go  healthz.go  (+2 more)
scheduler/migrations/: 00001_init.sql  00002_narrow_heart_score_to_humans.sql  00003_add_query_config.sql  00004_add_digests.sql  00005_add_users_sessions.sql  00006_scope_queries_digests_to_users.sql  00007_relax_query_name_uniqueness.sql  00008_scope_digests_uniq_index_by_user.sql  embed.go
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: main.tsx  router.tsx  styles.css
worker/: Dockerfile  Dockerfile.digest  pyproject.toml  railway.digest.json  railway.json
worker/src/pubmed_worker/: db.py  logging_setup.py  main.py  pubmed.py  ratelimit.py
worker/src/worker/: __main__.py  consumer.py  db.py  filters.py  logging_setup.py  parser.py  pipeline.py  pubmed_client.py
worker/src/worker/digest/: __main__.py  builder.py  db.py  renderer.py  scheduler.py  sender.py
worker/src/worker/digest/templates/: digest.html.j2
worker/tests/: test_brevo_sender.py
(+72 files in other folders)
