[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed-worker"
version = "0.5.0"
requires-python = ">=3.12"
dependencies = [
    "pika==1.3.2",
    "httpx==0.27.2",
    "lxml==5.3.0",
    "psycopg[binary]==3.2.3",
    "jinja2==3.1.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
pubmed-worker = "worker.__main__:main"
pubmed-digest-worker = "worker.digest.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"worker.digest.templates" = ["*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
